[gd_scene load_steps=15 format=3 uid="uid://bm1tkh7x1d3cl"]

[ext_resource type="Script" path="res://Scripts/CharacterBody3D.gd" id="1_5ft5w"]
[ext_resource type="FontFile" uid="uid://b1cueuu1ntugv" path="res://Fonts/Times New Roman.ttf" id="2_a7juk"]
[ext_resource type="AudioStream" uid="uid://ci6717seh6nkl" path="res://Sound-Effect and music/dark-souls-'-you-died-'-sound-effect-made-with-Voicemod.mp3" id="3_y6gpd"]
[ext_resource type="PackedScene" uid="uid://8cj4yntvqgt4" path="res://scenes/menu.tscn" id="5_fnvqp"]
[ext_resource type="PackedScene" uid="uid://chm5ix4falpah" path="res://scenes/blockbench_dude.tscn" id="6_70msx"]
[ext_resource type="PackedScene" uid="uid://d1c2gsmi5olfg" path="res://scenes/skill_tree.tscn" id="6_j0r2y"]
[ext_resource type="PackedScene" uid="uid://dgg4hahiwclxx" path="res://scenes/main_background_music.tscn" id="7_3s78q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jhb74"]
radius = 0.375896
height = 2.10372

[sub_resource type="Animation" id="Animation_x0vj4"]
resource_name = "Menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_noais"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("You Died:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a5fro"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tkp4n"]
resource_name = "deathScreen"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("You Died:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x8p6e"]
resource_name = "menuClose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q26w4"]
_data = {
"Menu": SubResource("Animation_x0vj4"),
"RESET": SubResource("Animation_noais"),
"death": SubResource("Animation_a5fro"),
"deathScreen": SubResource("Animation_tkp4n"),
"menuClose": SubResource("Animation_x8p6e")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_5ft5w")

[node name="Player3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02118, -0.026892)
shape = SubResource("CapsuleShape3D_jhb74")

[node name="CamOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamOrigin"]
spring_length = 6.5
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CamOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.5)

[node name="deathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q26w4")
}

[node name="You Died" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0.309804, 0, 0.00392157, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -48.0
offset_right = 216.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_a7juk")
theme_override_font_sizes/normal_font_size = 86
text = "YOU DIED"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y6gpd")

[node name="deathCounter" type="RichTextLabel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_bottom = 27.0
grow_horizontal = 0
text = "Deaths: 0"

[node name="Menu" parent="." instance=ExtResource("5_fnvqp")]

[node name="skillTree" parent="." instance=ExtResource("6_j0r2y")]

[node name="blockbench_export" parent="." instance=ExtResource("6_70msx")]

[node name="Music" parent="." instance=ExtResource("7_3s78q")]

[node name="Player" type="Area3D" parent="."]

[node name="Player" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02118, -0.026892)
shape = SubResource("CapsuleShape3D_jhb74")

[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="showSkillTree" from="Menu" to="." method="_on_menu_show_skill_tree"]
[connection signal="healthUp" from="skillTree" to="." method="_on_skill_tree_health_up"]
[connection signal="staminaUp" from="skillTree" to="." method="_on_skill_tree_stamina_up"]
[connection signal="attackConnected" from="blockbench_export" to="." method="_on_blockbench_export_attack_connected"]
[connection signal="attackFinished" from="blockbench_export" to="." method="_on_blockbench_export_attack_finished"]
